Update system to version 2

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                   <p
                     class="text-lg text-slate-600 dark:text-slate-300 leading-relaxed"
                   >
-                    بشتغل بأحدث التقنيات زي React و Next.js و TypeScript عشان
+                    بشتغل بأحدث التقنيات زي React و TypeScript عشان
                     أقدم حلول عالية الجودة وتعدي التوقعات.
                   </p>
                 </div>
@@ -578,7 +578,7 @@
                     class="flex items-center gap-3 text-slate-600 dark:text-slate-300"
                   >
                     <span class="w-2 h-2 bg-primary rounded-full"></span>
-                    <span>تطوير تطبيقات ويب متكاملة بـ React & Next.js</span>
+                    <span>تطوير تطبيقات ويب متكاملة بـ React & TypeScript</span>
                   </div>
                   <div
                     class="flex items-center gap-3 text-slate-600 dark:text-slate-300"
@@ -627,11 +627,11 @@
                   <p class="text-slate-500">// من أنا باختصار</p>
                   <p class="mt-3">
                     <span class="text-purple-400">const</span>
-                    <span class="text-blue-400">ahmed</span> = {
+                    <span class="text-blue-400">ali</span> = {
                   </p>
                   <p class="ml-4">
                     <span class="text-green-400">name</span>:
-                    <span class="text-yellow-400">"علي ضياء"</span>,
+                    <span class="text-yellow-400">"Ali Diaa"</span>,
                   </p>
                   <p class="ml-4">
                     <span class="text-green-400">title</span>:
@@ -1798,7 +1798,7 @@
                     <p
                       class="text-slate-600 dark:text-slate-300 leading-relaxed text-lg flex-grow"
                     >
-                      "شغل أحمد معانا كان حاجة تانية خالص. قدم حلول مبتكرة لكل
+                      "شغل علي معانا كان حاجة تانية خالص. قدم حلول مبتكرة لكل
                       المشاكل اللي واجهتنا. الموقع اللي عمله عدى كل توقعاتنا في
                       التصميم والأداء."
                     </p>
@@ -1836,7 +1836,7 @@
                       class="text-slate-600 dark:text-slate-300 leading-relaxed text-lg flex-grow"
                     >
                       "المتجر بتاعنا بقى محترف ومريح جداً في الاستخدام. مبيعاتنا
-                      زادت 60% في أول شهر. شكراً يا أحمد على المجهود الجبار!"
+                      زادت 60% في أول شهر. شكراً يا علي على المجهود الجبار!"
                     </p>
                   </div>
                 </div>
@@ -1945,7 +1945,7 @@
                     <p
                       class="text-slate-600 dark:text-slate-300 leading-relaxed text-lg flex-grow"
                     >
-                      "تجربة ممتازة من الأول للآخر. أحمد سمع طلباتنا كويس وقدم
+                      "تجربة ممتازة من الأول للآخر. علي سمع طلباتنا كويس وقدم
                       أفكار برة الصندوق. الموقع الجديد عجب العملاء جداً."
                     </p>
                   </div>
@@ -2000,7 +2000,7 @@
                     <p
                       class="text-slate-600 dark:text-slate-300 leading-relaxed text-lg flex-grow"
                     >
-                      "أحمد ساعدنا نحول الفكرة لواقع. الـ MVP اللي عمله كان
+                      "علي ساعدنا نحول الفكرة لواقع. الـ MVP اللي عمله كان
                       ممتاز عشان نجذب مستثمرين. شطارة تقنية وإبداع ملوش حل."
                     </p>
                   </div>
@@ -2055,7 +2055,7 @@
                     <p
                       class="text-slate-600 dark:text-slate-300 leading-relaxed text-lg flex-grow"
                     >
-                      "الشغل مع أحمد كان مريح ومنظم جداً. دايماً بيبعت تحديثات
+                      "الشغل مع علي كان مريح ومنظم جداً. دايماً بيبعت تحديثات
                       وبيرد بسرعة على أي تعديل. النتيجة النهائية أحسن من اللي
                       كنا متخيلينه."
                     </p>
